# mw2000.github.io

./: ._config.yml.swp  CNAME  Cargo.toml  Dioxus.toml  Gemfile  _config.yml
_archive/: 2023-05-20-the-effects-of-AI-on-Labour-and-the-push-towards-capital-ownership.md.md  2023-10-30-scarcity-to-infinity-reducing-friction-in-developing-markets.md
_data/: navigation.yml
_pages/: about.md  blockchain.md  good-reads.md  home.md  thesis.md  work.md
_posts/: 2019-03-27-plasticoin-incentizing-plastic-recycling.md  2023-05-20-the-effects-of-AI-on-Labour-and-the-push-towards-capital-ownership.md.md  2023-05-24-empires-fall-protocols-persist-a-comparison-of-societal-and-technological-evolution.md
posts/: 1.md  2.md  3.md
src/: main.rs
